@@ -1,3 +1,8 @@
+2003-09-11	fabian
+
+    * Fixed a bug in showCursor that causes assertation failures.
+    * Fixed a bug that causes sometimes incorrect screen refreshing.
+    
 2003-09-10	fabian
 
     * Changed doIdleCode behavior to reduce CPU using of idle sessions.
